// 定义文件级别的Json标签复制
// @Tag("gorm", "autoUpdateTime:nano")

syntax = "proto3";

package admin;

import "http_config.proto";

option go_package = "github.com/go-home-admin/go-admin/generate/proto/admin";

service AdminUser {
  option (http.RouteGroup) = "admin";

  // 登陆信息
  rpc GetInfo(GetInfoRequest)returns(GetInfoResponse){
    option (http.Get) = "/auth/info";
  }
}

message GetInfoRequest {
  string token = 1;
}

message GetInfoResponse {
  // 名称
  string name = 1;
  // 头像
  string avatar = 2;
}